[gd_scene load_steps=12 format=2]

[ext_resource path="res://ui/root/menu_button.gd" type="Script" id=1]
[ext_resource path="res://ui/root/components/view_container.gd" type="Script" id=2]
[ext_resource path="res://ui/root/components/dialog_manager.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/common/auto_scale.gd" type="Script" id=4]
[ext_resource path="res://ui/root/root.gd" type="Script" id=5]
[ext_resource path="res://ui/themes/dark.tres" type="Theme" id=6]
[ext_resource path="res://ui/icons/icon_menu.svg" type="Texture" id=7]
[ext_resource path="res://ui/root/components/notifications_center.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/themes/styles/icon_button_normal.tres" type="StyleBox" id=9]
[ext_resource path="res://ui/themes/styles/icon_button_hover.tres" type="StyleBox" id=10]
[ext_resource path="res://ui/themes/styles/icon_button_pressed.tres" type="StyleBox" id=11]

[node name="UserInterfaceRoot" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 256, 256 )
theme = ExtResource( 6 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
view_container = NodePath("VBoxContainer/ViewContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 4.0
margin_right = 1360.0
margin_bottom = 764.0
custom_constants/separation = 0

[node name="TopBar" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1354.0
margin_bottom = 29.0

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/TopBar"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 2.0
margin_bottom = 29.0
custom_constants/separation = 2
script = ExtResource( 4 )
const_separation = true

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/TopBar"]
margin_left = 6.0
margin_right = 30.0
margin_bottom = 29.0
rect_min_size = Vector2( 24, 24 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/normal = ExtResource( 9 )
icon = ExtResource( 7 )
expand_icon = true
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": "Items are defined in the MainView script"
}

[node name="Tabs" type="Tabs" parent="VBoxContainer/TopBar"]
margin_left = 34.0
margin_right = 1354.0
margin_bottom = 29.0
size_flags_horizontal = 3
tab_align = 0
tab_close_display_policy = 2
drag_to_rearrange_enabled = true

[node name="ViewContainer" type="TabContainer" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 1354.0
margin_bottom = 760.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
tabs_visible = false
script = ExtResource( 2 )
tabs = NodePath("../TopBar/Tabs")
dialog_manager = NodePath("../../DialogManager")

[node name="DialogManager" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 4.0
margin_right = 1360.0
margin_bottom = 764.0

[node name="NotificationsCenter" parent="." instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 6.0
margin_top = 4.0
margin_right = 1360.0
margin_bottom = 764.0
[connection signal="editor_tab_changed" from="VBoxContainer/ViewContainer" to="VBoxContainer/TopBar/MenuButton" method="_on_editor_tab_changed"]
